--- a/fe/src/statics/less/base.less
+++ b/fe/src/statics/less/base.less
@@ -4,6 +4,7 @@ html, body, #app {
   position: absolute;
   width: 100%;
   font-family: "Microsoft YaHei", SimSun, '\5b8b\4f53', sans-serif;
+  background: #F7F6F2;
 }
 
 * {
